--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     <!-- Custom CSS -->
     <link href="css/portfolio-item.css" rel="stylesheet">
 
+    <!-- Datepicker CSS -->
+    <link href="css/bootstrap-datepicker3.min.css" rel="stylesheet">
+
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -51,6 +54,45 @@
         </div>
         <!-- /.row -->
 
+        <div class="row">
+            <div class="panel panel-default">
+                <div class="panel-body">
+                    <div class="col-lg-12">
+                        <div class="form-group">
+                            <label for="website-url">Website URL</label>
+                            <div class="input-group">
+                                <div class="input-group-addon"><span class="glyphicon glyphicon-globe"></span></div>
+                                <input type="text" class="form-control" id="website-url" placeholder="Website URL">
+                            </div>
+                        </div>
+                    </div> 
+                    <div class="col-lg-12">
+                        <div class="form-group">
+                            <label for="website-url">Project Key</label>
+                            <div class="input-group">
+                                <div class="input-group-addon"><span class="glyphicon glyphicon-screenshot"></span></div>
+                                <input type="text" class="form-control" id="project-key" placeholder="Project Key">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="website-url">From date</label>
+                            <div class="input-group date" data-provide="datepicker">
+                                <div class="input-group-addon"><span class="glyphicon glyphicon-th"></span></div>
+                                <input type="text" class="form-control" id="from-date" placeholder="From date">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="website-url">To date</label>
+                            <div class="input-group date" data-provide="datepicker">
+                                <div class="input-group-addon"><span class="glyphicon glyphicon-th"></span></div>
+                                <input type="text" class="form-control" id="to-date" placeholder="To date">
+                            </div>
+                        </div>
+                    </div> 
+                </div>
+            </div>
+        </div>
+
     </div>
     <!-- /.container -->
 
@@ -62,6 +104,10 @@
 
     <!-- MomentJS -->
     <script src="js/moment.js"></script>
+
+    <!-- DatePicker JavaScript -->
+    <script src="js/bootstrap-datepicker.min.js"></script>
+    <script src="js/locales/bootstrap-datepicker.en-GB.min.js"></script>
 
     <!-- SonarQube JavaScript -->
     <script src="js/sq/Root.js"></script>
