--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     <!-- Datepicker CSS -->
     <link href="css/bootstrap-datepicker3.min.css" rel="stylesheet">
 
+    <!-- Datepicker CSS -->
+    <link href="css/bootstrap-multiselect.css" rel="stylesheet">
+
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -92,6 +95,24 @@
                                 <input type="text" class="form-control" id="to-date" placeholder="To date">
                             </div>
                         </div>
+                        <div class="form-group">
+                            <label for="website-url">Metrics</label>
+                            <div class="input-group">
+                                <div class="input-group-addon"><span class="glyphicon glyphicon-th-list"></span></div>
+                                <select id="metrics" class="form-control" multiple>
+                                    <optgroup label="Group 1" class="group-1">
+                                        <option value="1-1">Option 1.1</option>
+                                        <option value="1-2">Option 1.2</option>
+                                        <option value="1-3">Option 1.3</option>
+                                    </optgroup>
+                                    <optgroup label="Group 2" class="group-2">
+                                        <option value="2-1">Option 2.1</option>
+                                        <option value="2-2">Option 2.2</option>
+                                        <option value="2-3">Option 2.3</option>
+                                    </optgroup>
+                                </select>
+                            </div>
+                        </div>
                         <div class="form-group text-center">
                             <button type="button" class="btn btn-primary">SonarQube it!</button>
                         </div>
@@ -111,6 +132,9 @@
 
     <!-- MomentJS -->
     <script src="js/moment.js"></script>
+
+    <!-- MomentJS -->
+    <script src="js/bootstrap-multiselect.js"></script>
 
     <!-- DatePicker JavaScript -->
     <script src="js/bootstrap-datepicker.min.js"></script>
