--- a/index.html
+++ b/index.html
@@ -75,28 +75,28 @@
                     </div> 
                     <div class="col-lg-12">
                         <div class="form-group">
-                            <label for="website-url">Project Key</label>
+                            <label for="project-key">Project Key</label>
                             <div class="input-group">
                                 <div class="input-group-addon"><span class="glyphicon glyphicon-screenshot"></span></div>
                                 <input type="text" class="form-control" id="project-key" placeholder="Project Key">
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="website-url">From date</label>
+                            <label for="from-date">From date</label>
                             <div class="input-group date" data-provide="datepicker">
                                 <div class="input-group-addon"><span class="glyphicon glyphicon-th"></span></div>
                                 <input type="text" class="form-control" id="from-date" placeholder="From date">
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="website-url">To date</label>
+                            <label for="to-date">To date</label>
                             <div class="input-group date" data-provide="datepicker">
                                 <div class="input-group-addon"><span class="glyphicon glyphicon-th"></span></div>
                                 <input type="text" class="form-control" id="to-date" placeholder="To date">
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="website-url">Metrics</label>
+                            <label for="metrics">Metrics</label>
                             <div class="input-group">
                                 <div class="input-group-addon"><span class="glyphicon glyphicon-th-list"></span></div>
                                 <select id="metrics" class="form-control" multiple>
