--- a/index.html
+++ b/index.html
@@ -64,12 +64,20 @@
         <div class="row">
             <div class="panel panel-default">
                 <div class="panel-body">
-                    <div class="col-lg-12">
+                    <div class="col-lg-11">
                         <div class="form-group">
                             <label for="website-url">Website URL</label>
                             <div class="input-group">
                                 <div class="input-group-addon"><span class="glyphicon glyphicon-globe"></span></div>
                                 <input type="text" class="form-control" id="website-url" placeholder="Website URL">
+                            </div>
+                        </div>
+                    </div> 
+                    <div class="col-lg-1">
+                        <div class="form-group">
+                            <label for="website-url">&nbsp;</label>
+                            <div class="input-group">
+                                <button type="button" class="btn btn-default"><span class="glyphicon glyphicon-refresh"></span></button>
                             </div>
                         </div>
                     </div> 
