Fixed bug in SonarQube

--- a/index.html
+++ b/index.html
@@ -150,6 +150,9 @@
 
     <!-- SonarQube JavaScript -->
     <script src="js/sq/Root.js"></script>
+    <script src="js/sq/Metric.js"></script>
+    <script src="js/sq/Project.js"></script>
+    <script src="js/sq/SonarQube.js"></script>
     <script src="js/sq/main.js"></script>
 </body>
 
