--- a/index.html
+++ b/index.html
@@ -107,18 +107,7 @@
                             <label for="metrics">Metrics</label>
                             <div class="input-group">
                                 <div class="input-group-addon"><span class="glyphicon glyphicon-th-list"></span></div>
-                                <select id="metrics" class="form-control" multiple>
-                                    <optgroup label="Group 1" class="group-1">
-                                        <option value="1-1">Option 1.1</option>
-                                        <option value="1-2">Option 1.2</option>
-                                        <option value="1-3">Option 1.3</option>
-                                    </optgroup>
-                                    <optgroup label="Group 2" class="group-2">
-                                        <option value="2-1">Option 2.1</option>
-                                        <option value="2-2">Option 2.2</option>
-                                        <option value="2-3">Option 2.3</option>
-                                    </optgroup>
-                                </select>
+                                <select id="metrics" class="form-control" multiple></select>
                             </div>
                         </div>
                         <div class="form-group text-center">
