Added SonarQube version field

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                             </div>
                         </div>
                     </div> 
-                    <div class="col-lg-12">
+                    <div class="col-lg-10">
                         <div class="form-group">
                             <label for="project-key">Project Key</label>
                             <div class="input-group">
@@ -89,6 +89,31 @@
                                 <input type="text" class="form-control" id="project-key" placeholder="Project Key">
                             </div>
                         </div>
+                    </div> 
+                    <div class="col-lg-2">
+                        <div class="form-group">
+                            <label for="project-key">S.Q. Version</label>
+                            <div class="input-group">
+                                <div class="input-group-addon"><span class="glyphicon glyphicon-tag"></span></div>
+                                <select class="form-control">
+                                    <option value="5.6" selected="selected">5.6</option>
+                                    <option value="5.5">5.5</option>
+                                    <option value="5.4">5.4</option>
+                                    <option value="5.3">5.3</option>
+                                    <option value="5.2">5.2</option>
+                                    <option value="5.1">5.1</option>
+                                    <option value="5.0">5.0</option>
+                                    <option value="4.5">4.5</option>
+                                    <option value="4.4">4.4</option>
+                                    <option value="4.3">4.3</option>
+                                    <option value="4.2">4.2</option>
+                                    <option value="4.1">4.1</option>
+                                    <option value="4.0">4.0</option>
+                                </select>
+                            </div>
+                        </div>
+                    </div> 
+                    <div class="col-lg-12">
                         <div class="form-group">
                             <label for="from-date">From date</label>
                             <div class="input-group date" data-provide="datepicker">
@@ -96,6 +121,8 @@
                                 <input type="text" class="form-control" id="from-date" placeholder="From date">
                             </div>
                         </div>
+                    </div> 
+                    <div class="col-lg-12">
                         <div class="form-group">
                             <label for="to-date">To date</label>
                             <div class="input-group date" data-provide="datepicker">
@@ -103,6 +130,8 @@
                                 <input type="text" class="form-control" id="to-date" placeholder="To date">
                             </div>
                         </div>
+                    </div> 
+                    <div class="col-lg-12">
                         <div class="form-group">
                             <label for="metrics">Metrics</label>
                             <div class="input-group">
@@ -110,6 +139,8 @@
                                 <select id="metrics" class="form-control" multiple></select>
                             </div>
                         </div>
+                    </div> 
+                    <div class="col-lg-12">
                         <div class="form-group text-center">
                             <button type="button" class="btn btn-primary">SonarQube it!</button>
                         </div>
