Load metrics on select change

--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
                     </div> 
                     <div class="col-lg-2">
                         <div class="form-group">
-                            <label for="project-key">S.Q. Version</label>
+                            <label for="sq-version">S.Q. Version</label>
                             <div class="input-group">
                                 <div class="input-group-addon"><span class="glyphicon glyphicon-tag"></span></div>
-                                <select class="form-control">
+                                <select class="form-control" id="sq-version">
                                     <option value="5.6" selected="selected">5.6</option>
                                     <option value="5.5">5.5</option>
                                     <option value="5.4">5.4</option>
