--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <div class="col-lg-12 text-center">
                 <h1>SonarQube Dashboard</h1>
                 <h3>A simpler and powerful way to monitor your SonarQube project</h3>
-                <div id="notification" class="alert alert-danger" role="alert"></div>
+                <div id="notification" class="alert alert-danger hide" role="alert"></div>
             </div>
         </div>
         <!-- /.row -->
