Added localhost as default field value

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                             <label for="website-url">Website URL</label>
                             <div class="input-group">
                                 <div class="input-group-addon"><span class="glyphicon glyphicon-globe"></span></div>
-                                <input type="text" class="form-control" id="website-url" placeholder="Website URL">
+                                <input type="text" value="http://localhost:9000/" class="form-control" id="website-url" placeholder="Website URL">
                             </div>
                         </div>
                     </div> 
