--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                     <div class="col-lg-12">
                         <div class="form-group">
                             <label for="from-date">From date</label>
-                            <div class="input-group date" data-provide="datepicker">
+                            <div class="input-group date" id="from-datepicker" data-provide="datepicker">
                                 <div class="input-group-addon"><span class="glyphicon glyphicon-th"></span></div>
                                 <input type="text" class="form-control" id="from-date" placeholder="From date">
                             </div>
@@ -126,7 +126,7 @@
                     <div class="col-lg-12">
                         <div class="form-group">
                             <label for="to-date">To date</label>
-                            <div class="input-group date" data-provide="datepicker">
+                            <div class="input-group date" id="to-datepicker" data-provide="datepicker">
                                 <div class="input-group-addon"><span class="glyphicon glyphicon-th"></span></div>
                                 <input type="text" class="form-control" id="to-date" placeholder="To date">
                             </div>
@@ -143,7 +143,7 @@
                     </div> 
                     <div class="col-lg-12">
                         <div class="form-group text-center">
-                            <button type="button" class="btn btn-primary">SonarQube it!</button>
+                            <button type="button" onclick="sonarQubeIt()" class="btn btn-primary">SonarQube it!</button>
                         </div>
                     </div> 
                 </div>
